java 8 also fix some parsing issues